# ymux

./: .gitignore  CLAUDE.md  Cargo.toml  README.ja.md  README.ko.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
.omc/: project-memory.json  release-notes-v0.8.11.md  release-notes-v0.8.12.md  release-notes-v0.8.13.md  release-notes-v0.8.14.md  release-notes-v0.8.15.md  release-notes-v0.8.16.md  release-notes-v0.8.17.md
.omc/sessions/: 19b5bed0-6ab8-49e5-b221-5132eb4a3488.json  22dd6f02-d226-4b68-aefe-a9f86b6c49c4.json  238dfd2b-394d-4478-b7f0-b0fde94c6997.json  37ba40ba-b916-44c0-b245-7a1c1112d87e.json  3ea7dd75-732b-4b01-9d07-2e746e9b733a.json  52533374-aa59-45d8-96ce-9d7bb10ec571.json  54340844-4899-40c4-a63d-a74de47945e9.json  6ded7b81-6b10-41bc-86c9-f4eee492e521.json  9da3fa8f-5f85-48e2-b3a9-fcf4bd69176f.json  a52f3ba0-5d52-4c50-b1d5-2b825d683c54.json  c075ca74-2974-490f-8eb4-c56eeb8b6ae6.json  e1d9786f-fd9a-4085-8f88-324200a1c287.json
.omc/state/: hud-stdin-cache.json
crates/yversion/: Cargo.toml
scripts/: test.sh
src/: main.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  embedded_browser.rs  error.rs  lib.rs  main.rs  paste_images.rs  scrollback.rs  settings.rs  sysmonitor.rs  updater.rs  webview.rs
src-tauri/src/config/: mod.rs  model.rs  store.rs
src-tauri/src/git/: mod.rs
src-tauri/src/pty/: manager.rs  mod.rs  session.rs
src-tauri/src/shell/: detect.rs  mod.rs
src-tauri/wix/: path-env.wxs
src/browser/: BrowserPane.ts  NativeBrowserPane.ts  popupBlur.ts
src/help/: HelpOverlay.ts
src/hotkey/: HotKeyManager.ts
tools/ycode/: Cargo.toml
tools/ycode/assets/syntaxes/: svelte.sublime-syntax
tools/ycode/src/: app.rs  highlight.rs  main.rs  markdown.rs  sidebar.rs  ui.rs
(+55 files in other folders)
