[package]
name = "ymux"
version = "0.1.0"
description = "A lightweight tmux-inspired terminal multiplexer for Windows"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ymux_lib"
path = "src/lib.rs"

[[bin]]
name = "ymux"
path = "src/main.rs"
required-features = ["desktop"]

[build-dependencies]
tauri-build = { version = "2", optional = true }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
portable-pty = "0.8"
anyhow = "1"
thiserror = "1"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tauri runtime is only pulled in for the full desktop build. On Linux dev
# hosts we run `cargo check --lib --tests` without this feature to avoid the
# system-library dependencies (gtk/webkit2gtk/pango) that the tauri crate
# transitively needs.
tauri = { version = "2", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[features]
default = []
desktop = ["dep:tauri", "dep:tauri-build"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
